--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+body {
+    box-sizing: border-box;
+}
+
 .container {
     max-width: 472px;
-    max-height: 709px;
+    /* max-height: 709px; */
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -11,8 +15,32 @@
 
 }
 
+.logo {
+    margin: 5%;
+}
 .display{
-    border: 2px solid orange;
     border-radius: 50px;
+    height: 60px;
+    text-align: right;
+    font-size: 3rem;
+    padding: 1.1rem;
+    margin: auto 1.6rem;
+    background: #323335;
+    color: white;
+}
 
+.horizontal-buttons {
+    display: flex;
+}
+
+
+.operator-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.App {
+    display: flex;
+    margin: 1.5rem;
 }
